# FastAPI_MVC_com_Interface_PostgreSQL_Async

./: pyproject.toml
app/: main.py
app/frontend/templates/: _base.html
tests/: test_routes.py
